Fixed sliders so flask can read from them

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -219,7 +219,7 @@
                             <small id="nearbyEmphasis" class="form-text text-muted">Emphasis:</small> 
                         </div>
                         <div class="col-sm-9 my-auto">
-                            <input id="nearbySlider" type="range" min="1" max="5" value="3">
+                            <input id="nearbySlider" name="nearbySlider" type="range" min="1" max="5" value="3">
                         </div>
                         <div class="col-sm-1">
                             <small id="nearbyEmphasisVal" class="form-text text-muted"></small>
@@ -263,7 +263,7 @@
                             <small id="languageEmphasis" class="form-text text-muted">Emphasis:</small> 
                         </div>
                         <div class="col-sm-7 my-auto">
-                            <input id="languageSlider" type="range" min="1" max="5" value="3">
+                            <input id="languageSlider" name="languageSlider" type="range" min="1" max="5" value="3">
                         </div>
                         <div class="col-sm-2">
                             <small id="languageEmphasisVal" class="form-text text-muted"></small>
@@ -283,7 +283,7 @@
                             <small id="drinkingEmphasis" class="form-text text-muted">Emphasis:</small> 
                         </div>
                         <div class="col-sm-7 my-auto">
-                            <input id="drinkingSlider" type="range" min="1" max="5" value="3">
+                            <input id="drinkingSlider" name="drinkingSlider" type="range" min="1" max="5" value="3">
                         </div>
                         <div class="col-sm-2">
                             <small id="drinkingEmphasisVal" class="form-text text-muted"></small>
