--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -176,12 +176,31 @@
         background-color:gray;
         color:white;
     }
+
+    .top-div {
+        width:100vw;
+        background-repeat: no-repeat;
+        background-position:center;
+        background-size: cover;
+        margin-bottom: 25px;
+        background-image:url({{ url_for('static', filename='travel2.jpg') }});
+    }
+
+    .global-search {
+        text-align:center;
+        margin: auto;
+        color:white;
+    }
+
 </style>
 
 <body>
-    <h1 style="font-size: 55px" class="global-search">
-        Desti-Nation Matcher
-    </h1>
+    <div class="top-div" style="height:{{ '35vh' if data | length == 0 else '20vh'}}">
+        <div class="top-spacer" style="height:{{ '8vh' if data | length == 0 else '0px'}}"></div>
+        <h1 style="font-size: 55px" class="global-search">
+            Desti-Nation Matcher
+        </h1>
+    </div>
     <form>
         <!-- Activities Input -->
         <div class="row">
