Added links to first and second prototypes on the front page for grading

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -407,6 +407,12 @@
     <div style="text-align:center">
         <a href="{{ url_for('irsystem.about') }}">About</a>
     </div>
+    <div style="text-align:center; margin-top:1%">
+        <small><a href="https://destinationmatcher-dnm.herokuapp.com/">First Prototype</a></small>
+    </div>
+    <div style="text-align:center">
+        <small><a href="https://dnm-v2.herokuapp.com/">Second Prototype</a></small>
+    </div>
 
 </body>
 <script>
@@ -424,7 +430,7 @@
         });
     }
 
-    //fix the stupid radio buttons
+    //fix the radio buttons
     var l1 = document.getElementById("l1");
     var l2 = document.getElementById("l2");
     l1.addEventListener("click", function () {
