Made tiny changes to some of the text on the frontend

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -236,7 +236,7 @@
         <div style="display: flex; justify-content: center;">
             <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#advancedSearch"
                 aria-expanded="true" aria-controls="advancedSearch">
-                Toggle Advanced Search
+                Advanced Search
             </button>
         </div>
 
@@ -294,7 +294,7 @@
                     <input type="text" class="form-control" id="languageInput" name="language" placeholder="Spanish"
                         value="{{ form_data['language'] if form_data['language'] }}">
                     <small id="languageHelp" class="form-text text-muted">
-                        Dominant language of the people at the locations
+                        Dominant language spoken at the resulting locations
                     </small>
                     <div class="row">
                         <div class="col-sm-4">
