Replaced Toggle Details with Additional Details

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -387,7 +387,7 @@
                     <br>
                 </span>
                 <!-- <p class="card-text">Location selected because it has:</p> -->
-                <span class="collapsible content">Toggle Details</span>
+                <span class="collapsible content">Additional Details</span>
                 <div class="collapsible-content">
                     <span>Local Languages: <span class="text-muted">{{ data[data_idx]['languages'] }}</span></span><br>
                     <span>Drinking Age: <span class="text-muted">{{ data[data_idx]['drinking'] }}</span></span><br>
